--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.11.5",
+    "angular-file-saver": "^1.1.3",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
+    "ng-file-saver": "^1.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
