--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@popperjs/core": "^2.11.5",
     "angular-file-saver": "^1.1.3",
     "bootstrap": "^5.1.3",
+    "cdk-table-exporter": "^10.2.4",
     "file-saver": "^2.0.5",
+    "mat-table-exporter": "^10.2.4",
     "ng-file-saver": "^1.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
